--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -823,7 +823,7 @@
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Personalización del color de fondo</string>
     <string name="why_upgrade_file_importing">Soporte de importación de archivos</string>
-    <string name="why_upgrade_zooming">Zooming</string>
+    <string name="why_upgrade_zooming">Zoom</string>
 
     <!-- License -->
     <string name="notice">Esta aplicación usa las siguientes bibliotecas de terceros que hacen mi vida más fácil. Gracias.</string>
