--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -848,7 +848,7 @@
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Personalizacja koloru tła</string>
     <string name="why_upgrade_file_importing">Obsługa importowania plików</string>
-    <string name="why_upgrade_zooming">Zooming</string>
+    <string name="why_upgrade_zooming">Powiększanie</string>
 
     <!-- License -->
     <string name="notice">Aplikacja korzysta z następujących bibliotek innych firm, aby ułatwić mi życie. Dziękuję.</string>
