--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -820,7 +820,7 @@
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Arka plan renklerini kişiselleştirme</string>
     <string name="why_upgrade_file_importing">Dosya ekleme desteği</string>
-    <string name="why_upgrade_zooming">Zooming</string>
+    <string name="why_upgrade_zooming">Yakınlaştırma</string>
 
     <!-- License -->
     <string name="notice">Bu uygulama hayatımı kolaylaştırmak için aşağıdaki üçüncü taraf kitaplıklarını kullanır. Teşekkürler.</string>
