--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -807,7 +807,7 @@
     <string name="why_upgrade_duplicate_contact_merging">Fusión de contactos duplicados mejorada</string>
     <string name="why_upgrade_font_size_customization">Personalización del tamaño de fuente</string>
     <string name="why_upgrade_private_contact_sharing">Uso compartido opcional de contactos privados dentro de nuestras aplicaciones</string>
-    <string name="why_upgrade_customizable_contact_ringtones">Customizable contact ringtones</string>
+    <string name="why_upgrade_customizable_contact_ringtones">Tonos de llamada de contacto personalizables</string>
 
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Listas de verificación</string>
@@ -818,7 +818,7 @@
     <string name="why_upgrade_date_and_time_format">Personalización del formato de fecha y hora</string>
     <string name="why_upgrade_shortcuts">Atajos de la pantalla de inicio</string>
     <string name="why_upgrade_file_compression">Soporte de compresión de archivos</string>
-    <string name="why_upgrade_recents_tab">Tab with recent files</string>
+    <string name="why_upgrade_recents_tab">Ficha con archivos recientes</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Personalización del color de fondo</string>
