--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -819,7 +819,7 @@
     <string name="why_upgrade_date_and_time_format">Personnalisation du format de date et d\'heure</string>
     <string name="why_upgrade_shortcuts">Raccourcis pour l\'écran d\'accueil</string>
     <string name="why_upgrade_file_compression">Prend en charge la compression de fichiers</string>
-    <string name="why_upgrade_recents_tab">Tab with recent files</string>
+    <string name="why_upgrade_recents_tab">Onglet avec les fichiers récents</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Personnalisation de la couleur de fond</string>
