--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -755,7 +755,7 @@
     <string name="why_upgrade_no_ads">Tanpa iklan</string>
     <string name="why_upgrade_no_internet_access">Tanpa akses internet</string>
     <string name="why_upgrade_footer">+ Jaminan Uang Kembali 100%</string>
-    <string name="why_upgrade_improved_design">Improved design</string>
+    <string name="why_upgrade_improved_design">Desain yang ditingkatkan</string>
 
     <!-- Gallery Pro -->
     <string name="why_upgrade_advanced_photo_editor">Editor foto tingkat lanjut</string>
@@ -774,7 +774,7 @@
     <string name="why_upgrade_duplicate_contact_merging">Peningkatan fitur penggabungan kontak duplikat</string>
     <string name="why_upgrade_font_size_customization">Kustomisasi ukuran font</string>
     <string name="why_upgrade_private_contact_sharing">Berbagi kontak pribadi opsional dalam aplikasi kami</string>
-    <string name="why_upgrade_customizable_contact_ringtones">Customizable contact ringtones</string>
+    <string name="why_upgrade_customizable_contact_ringtones">Nada dering kontak yang dapat disesuaikan</string>
 
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Daftar periksa</string>
@@ -785,12 +785,12 @@
     <string name="why_upgrade_date_and_time_format">Kustomisasi format tanggal dan waktu</string>
     <string name="why_upgrade_shortcuts">Pintasan layar beranda</string>
     <string name="why_upgrade_file_compression">Mendukung kompresi file</string>
-    <string name="why_upgrade_recents_tab">Tab with recent files</string>
+    <string name="why_upgrade_recents_tab">Tab dengan file terbaru</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Kustomisasi warna latar belakang</string>
     <string name="why_upgrade_file_importing">Mendukung pengimporan file</string>
-    <string name="why_upgrade_zooming">Zooming</string>
+    <string name="why_upgrade_zooming">Memperbesar</string>
 
     <!-- License -->
     <string name="notice">Aplikasi ini menggunakan pustaka pihak ketiga berikut untuk mempermudah pekerjaan. Terima kasih.</string>
