--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -823,7 +823,7 @@
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Personalizzazione del colore di sfondo</string>
     <string name="why_upgrade_file_importing">Supporto per l`importazione di file</string>
-    <string name="why_upgrade_zooming">Zooming</string>
+    <string name="why_upgrade_zooming">Zoom</string>
 
     <!-- License -->
     <string name="notice">Questa app usa le seguenti librerie di terze parti per semplificarmi la vita. Vi ringrazio.</string>
