--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -770,7 +770,7 @@
     <string name="why_upgrade_duplicate_contact_merging">重複した連絡先登録を改善</string>
     <string name="why_upgrade_font_size_customization">文字サイズのカスタマイズ</string>
     <string name="why_upgrade_private_contact_sharing">アプリ内で個別連絡先をシェアするオプション</string>
-    <string name="why_upgrade_customizable_contact_ringtones">Customizable contact ringtones</string>
+    <string name="why_upgrade_customizable_contact_ringtones">カスタマイズ可能な連絡先の着信音</string>
 
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">チェックリスト</string>
@@ -781,7 +781,7 @@
     <string name="why_upgrade_date_and_time_format">日付と時刻のフォーマットのカスタマイズ</string>
     <string name="why_upgrade_shortcuts">ホーム画面のショートカット</string>
     <string name="why_upgrade_file_compression">ファイル圧縮対応</string>
-    <string name="why_upgrade_recents_tab">Tab with recent files</string>
+    <string name="why_upgrade_recents_tab">最近のファイルのタブ</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">背景色のカスタマイズ</string>
