--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -816,7 +816,7 @@
     <string name="why_upgrade_date_and_time_format">Personalização do formato de data e hora</string>
     <string name="why_upgrade_shortcuts">Atalhos na tela principal</string>
     <string name="why_upgrade_file_compression">Suporte para compressão de arquivos</string>
-    <string name="why_upgrade_recents_tab">Tab with recent files</string>
+    <string name="why_upgrade_recents_tab">Guia com arquivos recentes</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Personalização da cor de fundo</string>
