--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -804,7 +804,7 @@
     <string name="why_upgrade_duplicate_contact_merging">Rehberde tekrarlanan kişilerin birleştirilmesi</string>
     <string name="why_upgrade_font_size_customization">Metin boyutu kişiselleştirme</string>
     <string name="why_upgrade_private_contact_sharing">Uygulamalarımız arasında tercihe bağlı rehber bilgileri paylaşma</string>
-    <string name="why_upgrade_customizable_contact_ringtones">Customizable contact ringtones</string>
+    <string name="why_upgrade_customizable_contact_ringtones">Özelleştirilebilir kişi zil sesleri</string>
 
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Kontrol listeleri</string>
@@ -815,7 +815,7 @@
     <string name="why_upgrade_date_and_time_format">Saat ve tarih formatını kişiselleştirme</string>
     <string name="why_upgrade_shortcuts">Ana sayfada kısayollar</string>
     <string name="why_upgrade_file_compression">Dosya sıkıştırma desteği</string>
-    <string name="why_upgrade_recents_tab">Tab with recent files</string>
+    <string name="why_upgrade_recents_tab">Son dosyaların bulunduğu sekme</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Arka plan renklerini kişiselleştirme</string>
